tests/printing/qualified-types-lifting.check
-- [E008] Not Found Error: tests/printing/qualified-types-lifting.scala:15:26 --
15 |  greaterThan(impure(), 3.runtimeChecked)
   |                        ^^^^^^^^^^^^^^^^
   |value runtimeChecked is not a member of Int.
   |An extension method was tried, but could not be fully constructed:
   |
   |    runtimeChecked[Int](3)
   |
   |    failed with:
   |
   |        The qualified type (x: Int) => x > x² cannot be checked at runtime
   |        
   |        where:    x  is a lambda parameter of type Int
   |                  x² is a free variable of type Int
   |        
[[syntax trees at end of                     typer]] // tests/printing/qualified-types-lifting.scala
package example {
  final lazy module val qualified-types-lifting$package:
    example.qualified-types-lifting$package =
    new example.qualified-types-lifting$package()
  final module class qualified-types-lifting$package() extends Object() {
    this: example.qualified-types-lifting$package.type =>
    def greaterThan(x: Int, y: Int @qualified[Int]((z: Int) => z > x)): Unit =
      ()
    def qualifiedResult(x: Int, y: Int): Int @qualified[Int]((z: Int) => z > x)
       =
      {
        val ev$1: Int = runtimeChecked[Int](x + y)
        if ev$1.isInstanceOf[Int with arg(0) > x] then
          ev$1.asInstanceOf[Int with arg(0) > x] else
          throw new IllegalArgumentException()
      }
    def noQualifier(x: Int, y: Int): Unit = ()
    def qualifiedSelf(x: Int @qualified[Int]((y: Int) => y > 0)): Unit = ()
    def impure(): Int = 42
    def test(): Unit =
      {
        example.greaterThan(example.impure(), 3.runtimeChecked)
        example.qualifiedResult(example.impure(), 3)
        example.noQualifier(example.impure(), 3)
        example.qualifiedSelf(
          {
            val ev$2: Int = runtimeChecked[Int](example.impure())
            if ev$2.isInstanceOf[Int with arg(0) > 0] then
              ev$2.asInstanceOf[Int with arg(0) > 0] else
              throw new IllegalArgumentException()
          }
        )
      }
  }
}

